--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "1. npm init 2. npm install --save-dev @babel/preset-react",
   "main": "index.js",
   "scripts": {
+    "start": "parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/jianghaifeng/react-scaffold/issues"
   },
-  "homepage": "https://github.com/jianghaifeng/react-scaffold#readme"
+  "homepage": "https://github.com/jianghaifeng/react-scaffold#readme",
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
+  }
 }
