--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "parcel-bundler": "^1.12.4"
   }
 }
