add lint script for pre-commit hook

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
+    "lint": "eslint \"src/\" --cache --fix --format table",
     "format": "prettier --write \"src/*.+(js|css)\""
   },
   "repository": {
