--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel index.html",
     "lint": "eslint \"src/\" --cache --fix --format table",
-    "format": "prettier --write \"src/*.+(js|css)\""
+    "format": "prettier --write \"**/*.+(js|css|html|md)\""
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,8 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "parcel-bundler": "^1.12.4",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "sass": "^1.26.9"
   },
   "husky": {
     "hooks": {
